# menkyo-crawl

./: .gitignore  README.md  README.rst  add_number.py  convert_to_tsv.py  download_image.py  furigana.js  get_all_vocabularies.py  index.js  main.py  morph.py  package-lock.json  package.json  pyproject.toml  remove_duplicate.py  requirements.txt  use_kuroshiro.py  vocabularies.py
extract_dict/: README.md  dedict.c
requirements/: base.txt
