[tool.poetry]
name = "menkyo-crawl"
version = "0.1.0"
description = ""
authors = ["Nguyen Nhan <nxtnhan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "=4.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12",
"beautifulsoup4==4.7.1",
"requests==2.22.0",
"bs4==0.0.1",
"mecab-python3==0.996.2"]
build-backend = "poetry.masonry.api"
